--- a/openbox/polybar/system.ini
+++ b/openbox/polybar/system.ini
@@ -14,14 +14,14 @@
 ;;
 ;; Polybar Variables For Modules :
 ;; card = ${system.graphics_card}
-;; battery = ${system.battery}
-;; adapter = ${system.adapter}
+;; battery = BAT0
+;; adapter = AC
 ;; interface = ${system.network_interface}
 
 [system]
-adapter = ACAD
-battery = BAT1
-graphics_card = amdgpu_bl0
+adapter = AC
+battery = BAT0
+graphics_card = intel_backlight
 network_interface = wlan0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
