--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,10 +8,7 @@ include colors-256.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka Term SS12
-bold_font        Iosevka Term SS12 Bold
-italic_font      Iosevka Term SS12 Oblique
-bold_italic_font Iosevka Term SS12 Bold Oblique
+font_family MesloLGS NF
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -25,7 +22,7 @@ bold_italic_font Iosevka Term SS12 Bold Oblique
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 14.0
 
 #: Font size (in pts)
 
