--- a/bspwm/.config/bspwm/alacritty/colors.yml
+++ b/bspwm/.config/bspwm/alacritty/colors.yml
@@ -2,27 +2,27 @@
 colors:
   # Default colors
   primary:
-    background: '#222D57'
-    foreground: '#EBDDEB'
+    background: '#232136'
+    foreground: '#e0def4'
 
   # Normal colors
   normal:
-    black:   '#36416B'
-    red:     '#f0719b'
-    green:   '#5af7b0'
-    yellow:  '#ffa56b'
-    blue:    '#57c7ff'
-    magenta: '#c792ea'
-    cyan:    '#89ddff'
-    white:   '#eeffff'
+    black:   '#232136'
+    red:     '#eb6f92'
+    green:   '#ea9a97'
+    yellow:  '#f6c177'
+    blue:    '#9ccfd8'
+    magenta: '#c4a7e7'
+    cyan:    '#3e8fb0'
+    white:   '#e0def4'
 
   # Bright colors
   bright:
-    black:   '#414B75'
-    red:     '#f02e6e'
-    green:   '#2ce592'
-    yellow:  '#ff8537'
-    blue:    '#1da0e2'
-    magenta: '#a742ea'
-    cyan:    '#47bae8'
-    white:   '#dee6e7'
+    black:   '#393552'
+    red:     '#b4637a'
+    green:   '#d7827e'
+    yellow:  '#ea9d34'
+    blue:    '#56949f'
+    magenta: '#907aa9'
+    cyan:    '#286983'
+    white:   '#d9d7e1'
