messing around with picom

--- a/bspwm/.config/bspwm/picom.conf
+++ b/bspwm/.config/bspwm/picom.conf
@@ -5,7 +5,7 @@
 
 corner-radius = 0;
 rounded-corners-exclude = [
-	"window_type = 'normal'",
+	# "window_type = 'normal'",
 	"class_g ?= 'rofi'",
 	"class_g ?= 'polybar'",
 	"class_g ?= 'tint2'"
@@ -59,7 +59,7 @@ shadow-offset-y = -12;
 # shadow-blue = 0
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-# shadow-color = "#000000"
+shadow-color = "#232136"
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -68,6 +68,7 @@ shadow-offset-y = -12;
 #
 # shadow-exclude = []
 shadow-exclude = [
+	"class_g = 'firefox' && argb",
 	"class_g = 'Cairo-clock'",
 	"class_g = 'CoverGloobus'",
 	"class_g = 'Tilda'",
@@ -140,7 +141,7 @@ inactive-opacity = 1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 1.0;
+frame-opacity = 0.8;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -172,26 +173,26 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
+  "69:class_g = 'Bspwm' && class_i = 'presel_feedback'",
   "100:class_g    = 'Bar'",            # lemonbar
   "100:class_g    = 'slop'",           # maim
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
-  "100:class_g    = 'Polybar'",
+  "80:class_g    = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "100:class_g    = 'TelegramDesktop'",
   "100:class_g    = 'Joplin'",
-  "100:class_g    = 'firefox'",
+  "80:class_g    = 'firefox' && class_i = 'toolbar'",
   "100:class_g    = 'Thunderbird'"
 ];
 
 #========================= Blurring =========================#
 
 blur: {
-  method = "none";
-  strength = 0;
+  method = "dual_kawase";
+  strength = 5;
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -200,7 +201,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-	"window_type = 'dock'",
+	# "window_type = 'dock'",
 	"window_type = 'desktop'",
 	"class_g = 'Plank'",
 	"class_g = 'slop'",
@@ -215,8 +216,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-#experimental-backends = true;
-backend = "xrender";
+experimental-backends = true;
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
@@ -413,8 +414,24 @@ log-level = "info";
 #
 wintypes:
 {
-  tooltip = { fade=true; shadow=true; opacity=0.95; focus=true; full-shadow=false; };
-  popup_menu = { opacity=1.0; }
-  dropdown_menu = { opacity=1.0; }
-  utility = { shadow=false; opacity=1.0; }
+  tooltip = { fade=true; shadow=true; opacity=0.85; focus=true; full-shadow=false; };
+  popup_menu = { opacity=0.85; }
+  dropdown_menu = { opacity=0.85; }
+  utility = { shadow=false; opacity=0.85; }
+  notification = { opacity=0.85; }
+  menu = { opacity=0.85; }
+  unknown = { opacity=0.85; }
+  desktop = { opacity=0.85; }
+  dock = { opacity=0.85; }
+  toolbar = { opacity=0.85; }
+  combo = { opacity=0.85; }
+  dnd = { opacity=0.85; }
+  splash = { opacity=0.85; }
+  dialog = { opacity=0.85; }
+  normal = { opacity=0.85; }
 };
+
+# 'WINDOW_TYPE' is one of the 15 window types defined in EWMH standard:
+#     "unknown", "desktop", "dock", "toolbar", "menu", "utility",
+#     "splash", "dialog", "normal", "dropdown_menu", "popup_menu",
+#     "tooltip", "notification", "combo", and "dnd".
