--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -44,12 +44,12 @@ module-margin-right = 0
 
 font-0 = "Iosevka Nerd Font:size=10;3"
 font-1 = "Iosevka Nerd Font:size=12;3"
-font-2 = "google\-mdi:size=12;3"
+font-2 = "google\\-mdi:size=12;3"
 font-3 = "Iosevka:style=bold:"size=12;3"
 
 modules-left = mod sep bspwm
-modules-center = mpd
-modules-right = volume sep bna sep ethernet sep battery sep date
+modules-center = xwindow
+modules-right = volume sep brightness sep network sep battery sep date
 
 separator =
 spacing = 0
@@ -62,7 +62,6 @@ locale =
 tray-position = right
 tray-detached = false
 tray-maxsize = 16
-tray-transparent = false
 tray-background = ${color.BACKGROUND}
 tray-offset-x = 0
 tray-offset-y = 0
