various polybar and bspwm tweaks. In a better state, but incomplete

--- a/bspwm/.config/bspwm/picom.conf
+++ b/bspwm/.config/bspwm/picom.conf
@@ -185,7 +185,8 @@ opacity-rule = [
   "100:class_g    = 'TelegramDesktop'",
   "100:class_g    = 'Joplin'",
   "80:class_g    = 'firefox' && class_i = 'toolbar'",
-  "100:class_g    = 'Thunderbird'"
+  "100:class_g    = 'Thunderbird'",
+  "33:class_g    = 'dunst'"
 ];
 
 #========================= Blurring =========================#
