--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -42,16 +42,16 @@ padding = 1
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = "Iosevka Nerd Font:size=10;3"
-font-1 = "Iosevka Nerd Font:size=12;3"
+font-0 = "Iosevka Nerd Font:size=12;3"
+font-1 = "Iosevka SS12:style=bold:size=10;3"
 font-2 = "google\\-mdi:size=12;3"
-font-3 = "Iosevka:style=bold:"size=12;3"
+font-3 = "Iosevka SS12:style=bold:size=12;3"
 
-modules-left = mod sep bspwm
-modules-center = xwindow
-modules-right = volume sep brightness sep network sep battery sep date
+# include-file = ~/.config/bspwm/polybar/system
+include-file = ~/.config/bspwm/polybar/.modules
 
-separator =
+separator = " ∙ "
+separator-foreground = ${color.ALTBLACK}
 spacing = 0
 
 dim-value = 1.0
