new font set just dropped

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -5,15 +5,15 @@
   <!-- Set preferred serif, sans serif, and monospace fonts. -->
   <alias>
     <family>serif</family>
-    <prefer><family>Iosevka Etoile</family></prefer>
+    <prefer><family>Old Standard TT</family></prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
-    <prefer><family>Iosevka Aile</family></prefer>
+    <prefer><family>Ubuntu</family></prefer>
   </alias>
   <alias>
     <family>sans</family>
-    <prefer><family>Iosevka Aile</family></prefer>
+    <prefer><family>Ubuntu</family></prefer>
   </alias>
   <alias>
     <family>monospace</family>
@@ -24,44 +24,37 @@
   <match>
     <test name="family"><string>Arial</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Aile</string>
+      <string>Ubuntu</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>Helvetica</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Aile</string>
+      <string>Ubuntu</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>Verdana</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Aile</string>
+      <string>Ubuntu</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>Tahoma</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Aile</string>
-    </edit>
-  </match>
-  <match>
-    <!-- Insert joke here -->
-    <test name="family"><string>Comic Sans MS</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Arimo</string>
+      <string>Ubuntu</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>Times New Roman</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Etoile</string>
+      <string>Old Standard TT</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>Times</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Etoile</string>
+      <string>Old Standard TT</string>
     </edit>
   </match>
   <match>
