some nice bspwm hotkey fixes, zathura fullscreen

--- a/bspwm/.config/bspwm/picom.conf
+++ b/bspwm/.config/bspwm/picom.conf
@@ -416,10 +416,10 @@ log-level = "info";
 wintypes:
 {
   tooltip = { fade=true; shadow=true; opacity=0.85; focus=true; full-shadow=false; };
-  popup_menu = { opacity=0.85; }
-  dropdown_menu = { opacity=0.85; }
-  utility = { shadow=false; opacity=0.85; }
-  notification = { opacity=0.85; }
+  popup_menu = { fade=true; opacity=0.85; }
+  dropdown_menu = { fade=true; opacity=0.85; }
+  utility = { fade=true; shadow=false; opacity=0.85; }
+  notification = { fade=true; opacity=0.85; }
   menu = { opacity=0.85; }
   unknown = { opacity=0.85; }
   desktop = { opacity=0.85; }
@@ -427,8 +427,8 @@ wintypes:
   toolbar = { opacity=0.85; }
   combo = { opacity=0.85; }
   dnd = { opacity=0.85; }
-  splash = { opacity=0.85; }
-  dialog = { opacity=0.85; }
+  splash = { fade=true; opacity=0.85; }
+  dialog = { fade=true; opacity=0.85; }
   normal = { opacity=0.85; }
 };
 
