attempt to fix annoying gpg keyboard grabbing and hiding behavior

--- a/gnupg/.local/share/gnupg/gpg-agent.conf
+++ b/gnupg/.local/share/gnupg/gpg-agent.conf
@@ -1,5 +1,6 @@
-pinentry-program /usr/bin/pinentry-gnome3
+pinentry-program /usr/bin/pinentry-gnome3 --no-global-grab
 keyserver hkps://keys.openpgp.org
 
-max-cache-ttl 3600
-default-cache-ttl 3600
+no-allow-external-cache
+max-cache-ttl 72000
+default-cache-ttl 77200
