fix gpg-agend bug

--- a/gnupg/.local/share/gnupg/gpg-agent.conf
+++ b/gnupg/.local/share/gnupg/gpg-agent.conf
@@ -1,6 +1,7 @@
-pinentry-program /usr/bin/pinentry-gnome3 --no-global-grab
-keyserver hkps://keys.openpgp.org
+pinentry-program /usr/bin/pinentry-gnome3
 
 no-allow-external-cache
 max-cache-ttl 72000
 default-cache-ttl 77200
+allow-loopback-pinentry
+no-grab
