--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -21,47 +21,47 @@
   </alias>
 
   <!-- Aliases for commonly used MS fonts. -->
-  <match>
-    <test name="family"><string>Arial</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Ubuntu</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Helvetica</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Ubuntu</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Verdana</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Ubuntu</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Tahoma</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Ubuntu</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Times New Roman</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Old Standard TT</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Times</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Old Standard TT</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Courier New</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka SS12</string>
-    </edit>
-  </match>
+  <!-- <match> -->
+  <!--   <test name="family"><string>Arial</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Ubuntu</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
+  <!-- <match> -->
+  <!--   <test name="family"><string>Helvetica</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Ubuntu</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
+  <!-- <match> -->
+  <!--   <test name="family"><string>Verdana</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Ubuntu</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
+  <!-- <match> -->
+  <!--   <test name="family"><string>Tahoma</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Ubuntu</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
+  <!-- <match> -->
+  <!--   <test name="family"><string>Times New Roman</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Old Standard TT</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
+  <!-- <match> -->
+  <!--   <test name="family"><string>Times</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Old Standard TT</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
+  <!-- <match> -->
+  <!--   <test name="family"><string>Courier New</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Iosevka SS12</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
 
 </fontconfig>
