--- a/inputrc/.inputrc
+++ b/inputrc/.inputrc
@@ -24,4 +24,9 @@ set visible-stats On
 set colored-stats On
 set colored-completion-prefix On
 
-set show-all-if-ambiguous On
+set show-all-if-unmodified On
+
+$if mode=vi
+        set keymap vi-insert
+        Control-l: clear-screen 
+$endif
