--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -278,8 +278,8 @@ command_on_bell none
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  1024
-initial_window_height 800
+initial_window_width  100c
+initial_window_height 30c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
